# englight_ai

./: .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml  tags-pretty.sh
.github/workflows/: main.yml
src/: bot.py  constants.py  data_types.py  decorators.py  gemini.py  main.py  requirements-dev.txt  requirements.txt  utils.py
src/alembic/: env.py  script.py.mako
src/alembic/versions/: 095767fcb6bd_initial_migration.py  25f219fad108_add_word_progress_table.py  38de4d9f334e_add_next_review_at_to_word_progress.py
src/core/: data_types.py  decorators.py  gemini.py  loggers.py  scheduler.py
src/database/: database.py  managers.py  models.py
src/telegram/: bot.py  buttons.py  filters.py  states.py
src/telegram/middlewares/: retry_after.py
